--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -81,7 +81,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/white"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            />
 
     </LinearLayout>
     </LinearLayout>
