--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="color_default">#03B6FC</color>
+    <color name="white">#8491DE</color>
+    <color name="color_default">#11EFB2</color>
 </resources>
